main content + responsive design

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,62 @@
+@import './components/navbar/navbar.css';
+@import './components/hero/hero.css';
+@import './components/about/about.css';
+@import './components/projects/projects.css';
+@import './components/contact/contact.css';
+@import './components/footer/footer.css';
+
+:root {
+  --clr-grey1: rgba(0,0,0,0.1);
+  --clr-grey2: rgba(0,0,0,0.13);
+  --clr-grey3: rgba(0,0,0,0.15);
+
+  --clr-accent1: #6A8EAE;
+
+  --small: 479px;
+  --medium: 767px;
+  --large: 768px;
+}
+
 .App {
-  text-align: center;
+  margin: 0;
+  padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.bottom {
+  border-bottom: 1px solid black
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+a {
+  color: black;
+  text-decoration: none;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+h1 {
+  font-size: 2em;
+  font-weight: 400;
+  margin: 1rem 0;
 }
 
-.App-link {
-  color: #61dafb;
+input, textarea {
+  border: none;
+  font-family: inherit;
+  font-size: 1em;
+  font-weight: 100;
+  padding: 1rem 0.5rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button {
+  border: none;
+  padding: 1rem;
+  font-family: inherit;
+  font-size: 1em;
+  font-weight: 100;
+  cursor: pointer;
+  background: var(--clr-grey3);
+  color: #fff;
+  transition-duration: 100ms;
+}
+
+button:hover {
+  background: var(--clr-accent1)
 }
