--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -21,10 +21,12 @@
     padding: 0.5rem;
     margin: 1rem 0;
     border-left: 2px solid var(--clr-grey3);
+    transition-duration: 600ms;
 }
 
 .about-list li:hover {
     background: var(--clr-grey3);
+    letter-spacing: 3px;
 }
 
 @media (min-width: 768px) {
