--- a/src/components/hero/hero.css
+++ b/src/components/hero/hero.css
@@ -5,10 +5,10 @@
     align-items: center;
     flex-direction: column;
     background: rbga(0,0,0,0);
-    padding: 1rem;
     background-size: cover;
     z-index: 3000;
-    width: 100%;
+    width: inherit;
+    height: 25rem;
 }
 
 .hero-box {
@@ -16,18 +16,27 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background-color: rgba(0,0,0,0.2);
-    padding: 1rem;
-    color: #fff
+    background-color: rgba(0,0,20,0.4);
+    padding: 0rem;
+    padding-bottom: 2rem;
+    color: #fff;
+    transition: 400ms;
+    width: inherit;
+    height: inherit;
+    text-align: center;
+}
+
+.hero-box:hover {
+    background-color: rgba(0,0,0,0.6);
 }
 
 .hero-text {
-    margin: 1rem;
+    margin: 0.5rem;
 }
 
 .hero-text h1 {
     font-weight: 400;
-    font-size: 2.2rem;
+    font-size: 2.5rem;
 }
 
 .hero-text h1:hover {
@@ -35,8 +44,9 @@
 }
 
 .hero-text h2 {
-    font-weight: 400;
+    font-weight: 300;
     font-size: 1.4rem;
+    line-height: 0.4rem;
 }
 
 .hero-container h1 {
@@ -47,7 +57,6 @@
 .hero-btns-row {
     display: flex;
     flex-direction: row;
-    padding-bottom: 1rem;
 }
 
 .hero-btn {
@@ -61,33 +70,10 @@
 }
 
 .hero-btn:hover {
-    color: #888;
-    border-color: #888;
+    color: var(--clr-accent1);
+    border-color: var(--clr-accent1);
 }
 
-
-@media (min-width: 768px) {
-    .hero-container {
-        height: 34rem;
-    }
-}
-
-
-/* Backgrounds */
-
-.hero-bg1 {
-    /* background-image: url(../../img/hero/hero-img1.jpg); */
-    background: red;
-}
-
-.hero-bg2 {
-    /* background: url(../../img/hero/hero-img2.jpg); */
-    background: blue;
-}
-
-.hero-bg3 {
-    background: url(../../img/hero/hero-img3.jpg);
-}
 
 
 /* Flicking CSS */
@@ -104,7 +90,7 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 40rem;
+    height: 25rem;
     background-size: cover;
     background-position: center;
 }
@@ -116,4 +102,30 @@
 .hero-filter {
     filter: sepia(30%);
     filter: contrast(75%);
+}
+
+/* Media Queries */
+
+@media (min-width: 768px) {
+    .hero-container {
+        height: 40rem;
+    }
+
+    .hero-box {
+        background-color: rgba(0,0,20,0.25);
+        width: unset;
+        height: unset;
+        text-align: unset;
+        padding: 3rem 7rem;
+    }
+
+    .flicking-panel {
+        height: 40rem;
+    }
+}
+
+@media (max-width: 768) {
+    .eg-flick-viewport {
+        height: 25rem;
+    }
 }
