--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -1,48 +1,81 @@
 .about-container {
-    display: flex;
-    flex-direction: column;
-    background: var(--clr-grey1)
+  display: flex;
+  flex-direction: column;
+  background: var(--clr-grey1);
 }
 
 .about-div {
-    padding: 1rem;
+  padding: 1rem;
+}
+
+.about-div img {
+  width: 200px;
+  border-radius: 50%;
+}
+
+.about-center {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.about-text {
+  text-align: justify;
+  padding: 1rem;
+}
+
+.about-text p {
+  margin: 2rem 0;
 }
 
 .about-list {
-    padding: 0;
+  padding: 0;
 }
 
 .about-list li {
-    background: var(--clr-grey2);
-    list-style-type: none;
-    letter-spacing: 1px;
-    font-weight: 200;
-    display: flex;
-    padding: 0.5rem;
-    margin: 1rem 0;
-    border-left: 2px solid var(--clr-grey3);
-    transition-duration: 600ms;
+  background: var(--clr-grey2);
+  list-style-type: none;
+  letter-spacing: 1px;
+  font-weight: 200;
+  display: flex;
+  padding: 0.5rem;
+  margin: 1rem 0;
+  border-left: 2px solid var(--clr-grey3);
+  transition-duration: 600ms;
 }
 
 .about-list li:hover {
-    background: var(--clr-grey3);
-    letter-spacing: 3px;
+  background: var(--clr-grey3);
+  letter-spacing: 3px;
 }
+
+/* Small Screen Queries */
 
 @media (min-width: 768px) {
-    .about-container {
-        flex-direction: row;
-        padding: 1rem;
-    }
+  .about-container {
+    flex-direction: row;
+    padding: 1rem;
+  }
+
+  .about-div img {
+    margin: 0 2rem;
+  }
 }
 
+/* Large Screen Queries */
+
 @media (min-width: 900px) {
-    .about-container {
-        justify-content: center;
-        padding: auto 1rem;
-    }
-    
-    .about-div {
-        width: 25rem;
-    }
+  .about-container {
+    justify-content: center;
+    padding: auto 1rem;
+  }
+
+  .about-div {
+    max-width: 35rem;
+  }
+
+  .about-div img {
+    margin: 0 5rem;
+  }
 }
