--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,29 +1,34 @@
 footer {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 2rem;
 }
 
 .footer-div {
-    display: flex;
-    flex-direction: row;
-    color: #999;
+  display: flex;
+  flex-direction: row;
+  color: #999;
 }
 
 .footer-div p {
-    font-size: 0.8em;
+  font-size: 0.8em;
+}
+
+.footer-text {
+  flex-direction: column;
+  text-align: center;
 }
 
 .footer-icon {
-    height: 1.5rem;
-    margin: 0 0.5rem;
-    color: #999;
-    cursor: pointer;
-    transition-duration: 150ms;
+  height: 1.5rem;
+  margin: 0 0.5rem;
+  color: #999;
+  cursor: pointer;
+  transition-duration: 150ms;
 }
 
 .footer-icon:hover {
-    color: #333;
+  color: #333;
 }
