--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,51 +1,53 @@
 nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background: #fff;
-    height: 3.5rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: #fff;
+  height: 3.5rem;
 }
 
 .nav-logo {
-    font-size: 1.3em;
-    font-weight: 200;
-    padding: 0.75rem 1rem;
-    width: 75%;
+  font-size: 1.3em;
+  font-weight: 200;
+  padding: 0.75rem 1rem;
+  width: 75%;
 }
 
 .nav-logo a {
-    color: #333;
-    text-decoration: none;
-    cursor: pointer;
-    transition-duration: 200ms;
+  color: #333;
+  text-decoration: none;
+  cursor: pointer;
+  transition-duration: 200ms;
 }
 
 .nav-logo a:hover {
-    color: var(--clr-accent1);
+  color: var(--clr-accent1);
 }
 
-.nav-item {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition-duration: 150ms;
-    height: 100%;
-    width: 20%;
-    cursor: pointer;
+.nav-menu {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition-duration: 150ms;
+  height: 100%;
+  width: 20%;
+  cursor: pointer;
+
+  visibility: hidden;
 }
 
-.nav-item:hover {
-    background: var(--clr-grey1);
+.nav-menu:hover {
+  background: var(--clr-grey1);
 }
 
 .nav-menu-btn {
-    height: 1.5rem;
+  height: 1.5rem;
 }
 
 @media (min-width: 768px) {
-    .nav-item {
-        width: 6rem;
-    }
+  .nav-menu {
+    width: 6rem;
+  }
 }
 
 /* Menu icon from Font Awesome https://fontawesome.com/icons/bars?style=solid */
