--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -40,18 +40,21 @@
 .about-list li {
   background: var(--clr-grey2);
   list-style-type: none;
-  letter-spacing: 1px;
-  font-weight: 200;
+  letter-spacing: 0.6px;
+  font-weight: 500;
+  color: #444;
   display: flex;
   padding: 0.5rem;
   margin: 1rem 0;
-  border-left: 2px solid var(--clr-grey3);
-  transition-duration: 600ms;
+  border-left: 10px solid var(--clr-grey3);
+  transition-duration: 500ms;
 }
 
 .about-list li:hover {
-  background: var(--clr-grey3);
-  letter-spacing: 3px;
+  background: var(--clr-accent1);
+  color: #fff;
+  letter-spacing: 2px;
+  font-size: 1.1em;
 }
 
 /* Small Screen Queries */
@@ -77,6 +80,10 @@
 
   .about-div {
     max-width: 35rem;
+  }
+
+  .about-div > h1 {
+    font-size: 3em;
   }
 
   .about-div img {
