--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -10,7 +10,6 @@
 .tile {
   display: flex;
   align-items: flex-end;
-  padding-left: 1rem;
   height: 15rem;
   background: initial;
   background-size: cover;
@@ -25,6 +24,7 @@
 
 .tile-text {
   padding: 1rem;
+  width: 100%;
   transition-duration: 400ms;
   background: rgba(0, 0, 0, 0.2);
 }
